# portfolio

./: README.md
MLDashboard/: App.py  requirements.txt  utils.py
PySpark_dbt_Learning/: App.py  sql_modelling.py
PySpark_dbt_Learning/dbt_modelling/test1_/: dbt_project.yml  dev.duckdb
PySpark_dbt_Learning/dbt_modelling/test1_/models/: employees_model.sql  final_model.sql
api_vs_webscraping/: app.py  main.py  pyproject.toml  splitwise.csv  splitwise_client.py
dbt_project/: App.py  data_loaders.py  requirements.txt
dbt_project/dbt_modelling/test1_/: dev.duckdb
dbt_project/dbt_modelling/test1_/models/: dates_model.sql  final_model.sql
dbt_project/dbt_modelling/test1_/seeds/: employees.csv  properties.yml
hackathon/: App.py  README.md  data_loaders.py  pyproject.toml  requirements.txt
hackathon/data/: dummy_shop_data.csv  dummy_waste_data.csv
kata_project/: client.py  tests.py
kata_projects/christmas_lights/: client.py  tests.py
kata_projects/gilded_rose/: client.py  tests.py  utils.py
