[project]
name = "api-vs-webscraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gspread>=6.2.0",
    "ipykernel>=6.29.5",
    "oauth2client>=4.1.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "splitwise>=3.0.0",
]
