[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.5.0",
    "google-generativeai>=0.8.4",
    "load-dotenv>=0.1.0",
    "matplotlib>=3.3.4",
    "pandas==2.2.3",
    "plotly>=6.0.0",
    "python-dotenv>=1.0.1",
    "python-slugify>=8.0.4",
    "scikit-learn>=1.6.0",
    "sklearn-ensemble-cv==0.2.4",
    "streamlit>=1.43.0",
    "vertexai>=1.71.1",
]
